Fix header and icon colors in dark mode

--- a/assets/css/dark-mode.scss
+++ b/assets/css/dark-mode.scss
@@ -34,7 +34,11 @@
   background-color: #444444;
 }
 
-[data-theme="dark"] .social-icons .fa {
+[data-theme="dark"] .greedy-nav {
+  background: #444444;
+}
+
+[data-theme="dark"] .social-icons i {
   color: #E6E6E6;
 }
 
